final fix - prevent top-container overflow

--- a/Comfy/app.scss
+++ b/Comfy/app.scss
@@ -33,6 +33,11 @@
     --border-radius: var(--button-radius) !important;
   }
 
+  // remove overflow
+  .Root__top-container {
+    overflow: hidden;
+  }
+
   // SVG'S
   .main-trackList-playingIcon {
     border-radius: 0 !important; // exclude playing image
