--- a/Comfy/assets/_now_playing.scss
+++ b/Comfy/assets/_now_playing.scss
@@ -9,7 +9,6 @@
 
       // Cover-art
       .main-nowPlayingWidget-nowPlaying {
-        height: 0 !important;
         
         &.main-nowPlayingWidget-coverExpanded {
           transform: translateX(-95px);
